--- a/Aplicacion/GFive.Tienda/GFive.Tienda.Presentacion/Properties/Resources.resx
+++ b/Aplicacion/GFive.Tienda/GFive.Tienda.Presentacion/Properties/Resources.resx
@@ -136,6 +136,12 @@
   <data name="Filtrar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Filtrar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Icono" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Icono.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="IconoImage" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\IconoImage.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Limpiar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Limpiar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
